// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error test error analyze 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="error_message"
  >
    <h2>
      分析結果が取得できませんでした
    </h2>
    <form
      onSubmit={[Function]}
    >
      <button
        type="submit"
      >
        ホーム画面へ戻る
      </button>
    </form>
  </div>
</div>
`;

exports[`Error test error no image 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="error_message"
  >
    <h2>
      画像が存在しません
    </h2>
    <form
      onSubmit={[Function]}
    >
      <button
        type="submit"
      >
        ホーム画面へ戻る
      </button>
    </form>
  </div>
</div>
`;

exports[`Error test no error 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="error_message"
  >
    <h2>
      予期しないエラーが発生しました
    </h2>
    <form
      onSubmit={[Function]}
    >
      <button
        type="submit"
      >
        ホーム画面へ戻る
      </button>
    </form>
  </div>
</div>
`;
